2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Label added to all tests.  Redundant dependency
	removed.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Test result submission form added.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Catch exceptions thrown by assignment to a ReadOnly
	property, to test only whether ReadOnly attribute is set or not.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Inheritance support.  [Stringifies] support.
	Operation support.  Attribute support.
	(generate_id): Support for method/attribute names end with an
	uppercase letter.
	(generate_test): Use test_id instead of file name for the |title|
	element content.

2008-10-09  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Interface prototype object's |constructor| property
	test added.  Constant value property tests added.

2008-10-09  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Typo fixed.  Generate test harness HTML page.

2008-10-09  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: New script.

	* ChangeLog: New file.

